--- a/DatingApp-SPA/src/app/Members/member-edit/member-edit.component.html
+++ b/DatingApp-SPA/src/app/Members/member-edit/member-edit.component.html
@@ -14,7 +14,7 @@
     <div class="col-sm-4">
       <div class="card">
         <img
-          src="{{ user?.photoUrl }}"
+          src="{{ photoUrl }}"
           alt="{{ user?.knownAs }}"
           class="card-img-top img-thumbnail"
         />
@@ -93,7 +93,7 @@
             </form>
           </tab>
           <tab heading="Edit Photos">
-            <p>Edit Photos will come here</p>
+           <app-photo-editor [photos]="user.photos" (getIsMainPhotoChange)="updateMainPhoto($event)"></app-photo-editor>
           </tab>
         </tabset>
       </div>
