--- a/DatingApp-SPA/src/app/Members/MemberList/MemberList.component.html
+++ b/DatingApp-SPA/src/app/Members/MemberList/MemberList.component.html
@@ -1,7 +1,56 @@
-<div class="container mt-5">
+<div class="text-center mt-3">
+  <h2>Your matches - {{pagNav.totalItems}} found</h2>
+</div>
+
+<div class="container mt-3">
+
+  <div class="row">
+    <form class="form-inline" #form="ngForm" (ngSubmit)="loadUsers()" novalidate>
+      <div class="form-group">
+        <label for="minAge">Age From</label>
+        <input type="number" class="form-control" [(ngModel)]="userParams.minAge" style="width: 70px" id="minAge" name="minAge">
+      </div>
+
+      <div class="form-group">
+        <label for="maxAge">Age To</label>
+        <input type="number" class="form-control" [(ngModel)]="userParams.maxAge" style="width: 70px" id="maxAge" name="maxAge">
+      </div>
+
+      <div class="form-group">
+        <label for="gender">Show: </label>
+        <select class="form-control" style="width: 130px" id="gender" [(ngModel)]="userParams.gender" name="gender">
+          <option *ngFor="let gender of genderList" [value]="gender.value">
+            {{gender.display}}
+          </option>
+        </select>
+      </div>
+      <button type="submit" class="btn btn-primary" style="margin-left:10px">Apply Filters</button>
+      <button type="button" class="btn btn-info" style="margin-left:10px" (click)="resetFilters()">Reset Filter</button>
+
+      <div class="col">
+        <div class="btn-group float-right">
+          <button type="button" name="orderBy" class="btn btn-primary" (click)="loadUsers()" [(ngModel)]="userParams.orderBy" btnRadio="lastActive">Last Active</button>
+          <button type="button" name="orderBy" class="btn btn-primary" (click)="loadUsers()" [(ngModel)]="userParams.orderBy" btnRadio="created">Newest Members</button>
+        </div>
+      </div>
+
+    </form>
+  </div>
+  <br>
+
+
   <div class="row">
     <div *ngFor='let user of users' class="col-lg-2 col-md-3 col-sm-6">
      <app-MemberCard [user]="user"></app-MemberCard>
     </div>
   </div>
+</div>
+<div class="d-flex justify-content-center">
+  <pagination [boundaryLinks]="true" [totalItems]="pagNav.totalItems"
+              [itemsPerPage]="pagNav.itemsPerPage"
+              [(ngModel)]="pagNav.currentPage"
+              (pageChanged)="pageChagned($event)"
+            previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+ 
+</pagination>
 </div>
